CloudAlpacas/salesforce/main/default/objects/Campaign_Deliverable__c/Campaign_Deliverable__c.object-meta.xml
<CustomObject>
    <description>Sponsorship Campaign의 실행 과업(Deliverable)과 가중치 기반 진행률을 추적</description>
    <label>Campaign Deliverable</label>
    <nameField>
        <label>작업명</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Deliverables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>