CloudAlpacas/salesforce/main/default/objects/Campaign_Deliverable__c/fields/Blocked_Reason__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Reason__c</fullName>
    <description>실행 항목이 지연되거나 중단된 원인을 담당자가 기록하는 필드. 스폰서사별 실행 리스크와 반복되는 병목 유형을 파악하는 데 사용합니다.</description>
    <inlineHelpText>Status를 Blocked로 바꾸거나 Due Date를 더 늦은 날짜로 미룰 때 지연/중단 사유를 선택하세요. &apos;기타&apos;를 선택했다면 Notes에 상세 내용을 남겨주세요.</inlineHelpText>
    <label>Blocked Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>스폰서사 자료 대기</fullName>
            </value>
            <value>
                <fullName>스폰서사 승인 대기</fullName>
            </value>
            <value>
                <fullName>내부 제작·리소스 지연</fullName>
            </value>
            <value>
                <fullName>외주/파트너사 지연</fullName>
            </value>
            <value>
                <fullName>일정 재조율(우선순위 변경)</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>