CloudAlpacas/salesforce/main/default/objects/Campaign_Deliverable__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <description>성과 귀속 기준 Campaign</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Deliverables</relationshipLabel>
    <relationshipName>Campaign_Deliverables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>