CloudAlpacas/salesforce/main/default/objects/Campaign_Deliverable__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <inlineHelpText>이 캠페인 세부 실행 건을 실제로 완료한 날짜입니다. 아직 진행 중이거나 시작 전이면 비워둡니다.</inlineHelpText>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>