CloudAlpacas/salesforce/main/default/objects/Campaign_Deliverable__c/fields/Evidence_URL__c.field-meta.xml
<CustomField>
    <fullName>Evidence_URL__c</fullName>
    <description>사진·영상·외부 결과 링크</description>
    <inlineHelpText>캠페인 세부 실행 건 완료를 증명할 수 있는 사진, 영상, 게시물 등의 링크를 붙여넣습니다.</inlineHelpText>
    <label>Evidence URL</label>
    <type>Url</type>
</CustomField>