CloudAlpacas/salesforce/main/default/objects/Campaign_Deliverable__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>캠페인 세부 실행 건과 관련해 남기고 싶은 추가 메모를 자유롭게 작성합니다.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>