CloudAlpacas/salesforce/main/default/objects/Campaign_Deliverable__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Campaign 전체 진행률 계산에 반영되는 이 과업의 비중(%)</description>
    <label>Weight</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>